made function to copy Code for MyOpenMath

--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -87,7 +87,7 @@
                             Contains a responsive iframe element for embedding the GeoGebra tool into MyOpenMath
                             problems.
                         </p>
-                        <button onclick="copyToClipboard(frequencyDistributionGeoGebraTool)"
+                        <button onclick="copyCodeToClipboard('frequencyDistributionGeoGebraTool')"
                             style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
                             Copy Frequency Distribution GeoGebra Tool
                         </button>
@@ -110,7 +110,7 @@
                             Contains a responsive iframe element for embedding the Histogram Generator GeoGebra tool
                             into MyOpenMath problems.
                         </p>
-                        <button onclick="copyToClipboard(histogramGeoGebraTool)"
+                        <button onclick="copyCodeToClipboard('histogramGeoGebraTool')"
                             style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
                             Copy Histogram Generator GeoGebra Tool
                         </button>
@@ -133,7 +133,7 @@
                             Contains a responsive iframe element for embedding the Scientific Calculator GeoGebra tool
                             into MyOpenMath or webpages.
                         </p>
-                        <button onclick="copyToClipboard(scientificCalculatorGeoGebra)"
+                        <button onclick="copyCodeToClipboard('scientificCalculatorGeoGebra')"
                             style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
                             Copy Scientific Calculator GeoGebra Tool
                         </button>
