updates to index and pages.json for the website

--- a/1 Start Here/About This Course.html
+++ b/1 Start Here/About This Course.html
@@ -37,7 +37,8 @@
 
         <!-- Home & About Buttons as Links -->
         <a href="index.html" class="btn btn-outline-success me-2">Home</a>
-        <a href="1 Start Here/About This Course MCT.html" class="btn btn-outline-secondary">About</a>
+        <a href="1 Start Here/About This Course MCT.html" class="btn btn-outline-secondary me-2">About</a>
+<a id="printNotes" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="<span style='color:yellow;'>⚠️</span> <strong>Use Ctrl+P to Print Full Notes Without Blanks</strong>">Print Lecture Blank Notes</a>
 
         <!-- Search Bar -->
         <form class="d-flex ms-auto me-3" onsubmit="searchPage(event)">
@@ -92,11 +93,14 @@
 </main>
 </div>
 <!-- jQuery local fallback (Bootstrap Dependency) -->
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap CDN JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <!-- Course Scripts -->
 <script src="../js/loadmathjax.js"></script>
+</body>
+
+</html>
 </body>
 
 </html>
