index changes to link references

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <!-- CSS Stylesheets Used in Course Content Pages -->
-    <link rel="stylesheet" href="../css/main.min.css">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -180,7 +180,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- Course Scripts -->
-    <script src="../js/loadmathjax.js"></script>
+    <script src="js/loadmathjax.js"></script>
 </body>
 
 </html>
