--- a/1 Start Here/GeoGebra Embed Codes.html
+++ b/1 Start Here/GeoGebra Embed Codes.html
@@ -1,35 +1,86 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>GeoGebra Embed Codes </title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <!--Copy Data to Clipboard Script-->
-  <script>
-function copyToClipboard(preID) {
-    const pre = document.getElementById(preID);
-    const text = pre.textContent || pre.innerText;
-    navigator.clipboard.writeText(text).then(() => {
-        alert('Dataset copied to clipboard!');
-    }).catch(err => {
-        console.error('Error copying text: ', err);
-    });
-}
-</script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OER Introductory Statistics using GeoGebra</title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <!-- Bootstrap CDN CSS -->
-	<link rel="stylesheet" href="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/bootstrap-3.3.6/css/bootstrap.min.css">
-	
-	<!-- Course Styles -->
-	<link rel="stylesheet" href="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../assets/css/main.min.css">  <!-- Custom CSS -->
-  <link rel="stylesheet" href="../CSS/style.css">
-  <!--End Custom CSS-->
-</head><body class="content" role="document"><div class="container-fluid"><main>
-<div class="row bottom-md">
-<div class="col-sm-offset-1 col-xs-offset-1 col-xs-10">
-<h1>Embed Codes</h1>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Optional Bootstrap theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+
+  <!-- Optional Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+  <!-- Custom Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+  <!-- CSS Stylesheets Used in Course Content Pages -->
+  <link rel="stylesheet" href="../css/main.min.css">
+  <link rel="stylesheet" href="../css/style.css" />
+
+</head>
+
+<body class="content" role="document">
+  <div class="container-fluid">
+      <main>
+          <div class="row mb-4">
+              <div class="col-10 offset-1 col-md-10 offset-md-1">
+                  <header>
+                      <nav class="navbar navbar-expand-lg navbar-light px-3 rounded-1"
+                          style="background-color: #d0e6f9; position: relative;" data-bs-theme="light">
+                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                              <!-- Home & About Buttons as Links -->
+                              <a href="index.html" class="btn btn-outline-success me-2">Home</a>
+                              <a href="1 Start Here/About This Course MCT.html"
+                                  class="btn btn-outline-secondary me-2">About</a>
+                              <a id="printNotes" class="btn btn-outline-primary" data-bs-toggle="tooltip"
+                                  data-bs-placement="bottom"
+                                  title="<span style='color:yellow;'>⚠️</span> <strong>Use Ctrl+P to Print Full Notes Without Blanks</strong>">Print
+                                  Lecture Blank Notes</a>
+
+                              <!-- Search Bar -->
+                              <form class="d-flex ms-auto me-3" onsubmit="searchPage(event)">
+                                  <input id="searchInput" class="form-control me-2" type="search"
+                                      placeholder="Search this page..." aria-label="Search">
+                                  <button class="btn btn-outline-success" type="submit">Search</button>
+                              </form>
+
+                              <!-- Theme Toggle Dropdown Button -->
+                              <div class="dropdown">
+                                  <button id="theme-toggle"
+                                      class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center"
+                                      type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                          fill="currentColor" class="bi bi-circle-half" viewBox="0 0 16 16">
+                                          <path d="M8 15A7 7 0 1 0 8 1v14z" />
+                                      </svg>
+                                      <span class="ms-2">Theme</span>
+                                  </button>
+                                  <ul class="dropdown-menu dropdown-menu-end" style="position: absolute !important;">
+                                      <li><a class="dropdown-item" href="#" data-theme="light">
+                                              <i class="bi bi-sun"></i> Light
+                                          </a></li>
+                                      <li><a class="dropdown-item" href="#" data-theme="dark">
+                                              <i class="bi bi-moon"></i> Dark
+                                          </a></li>
+                                      <li><a class="dropdown-item" href="#" data-theme="auto">
+                                              <i class="bi bi-circle-half"></i> Auto
+                                          </a></li>
+                                  </ul>
+                              </div>
+
+                          </div>
+                      </nav>
+                  </header>
+<h1>Embed Codes for GeoGebra Applications</h1>
 <p>This page contains all the embed codes needed to embed the GeoGebra tools directly into webpages and assignments. If any links or buttons are broken, please report them to <a href="mailto:charles.mccauley@volstate.edu" target="_blank" rel="noopener">charles.mccauley@volstate.edu</a></p>
 <h2>Distribution Tools</h2>
 <ul>
@@ -88,25 +139,24 @@ function copyToClipboard(preID) {
 <pre id="CItestcalc" style="display: none;">&lt;iframe scrolling="no" title="Confidence Interval and Hypothesis Test Calculator" src="https://www.geogebra.org/material/iframe/id/sqbsgdkk/width/1100/height/651/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="1100px" height="651px" style="border:0px;"&gt;&lt;/iframe&gt;</pre>
 </li>
 </ul>
+<div class="d-flex justify-content-between mt-4">
+  <button id="prevPage" class="btn btn-outline-primary navigation-link previous"
+      role="button">Previous Page</button>
+  <button id="nextPage" class="btn btn-outline-primary navigation-link next"
+      role="button">Next Page</button>
+</div>
+<button id="printNotes" class="btn btn-outline-primary">Print Notes</button>
 </div>
 </div>
-</main></div>
+</main>
+</div>
 <!-- jQuery local fallback (Bootstrap Dependency) -->
-<p>
-<script src="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/jquery/jquery-1.11.3.min.js"></script>
-</p>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- Bootstrap CDN JS -->
-<p>
-<script src="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
-</p>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
 <!-- Course Scripts -->
-<p>
-<script src="/shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../assets/js/main.min.js"></script>
-</p>
-
-<div>
-  <button id="prevPage" class="navigation-link previous" role="button">Previous Page</button>
-<button id="nextPage" class="navigation-link next" role="button">Next Page</button>
-</div>
+<script src="../js/loadmathjax.js"></script>
 
 </body></html>
