added chapter 1 topical sections as well as updating the structure tree in pages.json and putting links on the index.html page

--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Homepage</title>
-<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<!-- Bootstrap CDN CSS -->
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CDN CSS -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Optional Bootstrap theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <!-- Optional Bootstrap theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 
-<!-- Optional Bootstrap Icons -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <!-- Optional Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-<!-- Custom Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Custom Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-<script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-<!-- CSS Stylesheets Used in Course Content Pages -->
-<link rel="stylesheet" href="css/main.min.css">
-<link rel="stylesheet" href="css/style.css" />
+    <!-- CSS Stylesheets Used in Course Content Pages -->
+    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -104,17 +104,32 @@
                         <section>
 
                             <h2>Unit One Content</h2>
+                            <h3>Chapter 1: Introduction to Statistical Thinking</h3>
                             <ul>
-                                <li><a href="2 Unit One Content/Chapter 1 Lecture Notes.html">Chapter 1 Lecture Notes Complete</a></li>
-                                <li><a href="2 Unit One Content/Chapter 2 Lecture Notes.html">Chapter 2 Lecture Notes Complete</a></li>
-                                <li><a href="2 Unit One Content/Data Levels of Measurement and Sampling.html">Data
-                                        Levels of Measurement and Sampling</a></li>
-                                <li><a href="2 Unit One Content/Introductory Terms and Concepts for Statistics.html">Introductory
-                                        Terms and Concepts for Statistics</a></li>
+                                <li><a href="2 Unit One Content/Introduction to Data and Statistics.html">Introduction to Data and Statistics</a></li>
+                                <li><a href="2 Unit One Content/Parameters and Statistics.html">Parameters and Statistics</a></li>
+                                <li><a href="2 Unit One Content/Classifying Data Types.html">Classifying Data Types</a></li>
+                                <li><a href="2 Unit One Content/Levels of Measurement.html">Levels of Measurement</a></li>
+                                <li><a href="2 Unit One Content/Data Collection and Bias.html">Data Collection and Bias</a></li>
+                                <li><a href="2 Unit One Content/Sampling Techniques and Errors.html">Sampling Techniques and Errors</a></li>
+                                <li><a href="2 Unit One Content/Experimental Design.html">Experimental Design</a></li>
+                                <li><a href="2 Unit One Content/Chapter 1 Lecture Notes.html">Chapter 1 Lecture Notes
+                                        Complete</a></li>
+                            </ul>
+                            <h3>Chapter 2: Organizing and Summarizing Data</h3>
+                            <ul>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                                <li><a href=""></a></li>
+                                <li><a href="2 Unit One Content/Chapter 2 Lecture Notes.html">Chapter 2 Lecture Notes
+                                        Complete</a></li>
+                            </ul>
+                            <h3>Chapter 3: Descriptive Statistics</h3>
+                            <ul>
                                 <li><a href="2 Unit One Content/Measures of Center.html">Measures of Center</a></li>
+                                <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a></li>
                                 <li><a href="2 Unit One Content/Measures of Location.html">Measures of Location</a></li>
-                                <li><a href="2 Unit One Content/Measures of Variation.html">Measures of Variation</a>
-                                </li>
                             </ul>
                         </section>
 
