Adding Chapter 2 Webpages, updating pages.json, updating index.html, and fixing "home" and "about" buttons in nav-bar

--- a/1 Start Here/GeoGebra Embed Codes.html
+++ b/1 Start Here/GeoGebra Embed Codes.html
@@ -37,8 +37,8 @@
                           <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                               <!-- Home & About Buttons as Links -->
-                              <a href="index.html" class="btn btn-outline-success me-2">Home</a>
-                              <a href="1 Start Here/About This Course MCT.html"
+                              <a href="../index.html" class="btn btn-outline-success me-2">Home</a>
+                              <a href="../1 Start Here/About This Course.html"
                                   class="btn btn-outline-secondary me-2">About</a>
                               <a id="printNotes" class="btn btn-outline-primary" data-bs-toggle="tooltip"
                                   data-bs-placement="bottom"
