--- a/2 Unit One Content/Misleading Graphs.html
+++ b/2 Unit One Content/Misleading Graphs.html
@@ -4,7 +4,7 @@
 <head>
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Levels of Measurement</title>
+<title>Misleading Graphs</title>
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
 <!-- Bootstrap CDN CSS -->
@@ -72,61 +72,12 @@
 </header>
 
 <section>
-    <h1>Levels of Measurement</h1>
-    <p>Statistics involves understanding, analyzing, and interpreting data, and a key component is
-        determining the "level of measurement" of data. Levels of measurement are important because they
-        determine the types of statistical analyses that can be performed and ensure proper
-        interpretation of data. There are four levels of measurement: nominal, ordinal, interval, and
-        ratio. Each builds upon the previous level, providing more information about the data.</p>
-    <div class="definition">
-        <h2 class="definition-header">Different Levels of Measurement</h2>
-        <p><b>Nominal Level:</b> Data at this level are categorized without any order. For example,
-            trying to classify people according to their favorite food does not make any sense: putting
-            pizza first and sushi second is not meaningful. Examples might include anything that is
-            qualitative data where there is no inherent order that can be prescribed: gender, eye color,
-            types of fruits, etc.</p>
-        <p><b>Ordinal Level:</b> Data are categorized with a meaningful order, but differences between
-            categories are not measurable. Examples include rankings in a competition or survey
-            responses such as "satisfied," "neutral," or "dissatisfied."</p>
-        <p><b>Interval Level:</b> Data have meaningful order, measurable differences, but no true zero
-            point. Examples include temperature in Celsius or years on a calendar. Interval level data
-            can be used in calculations, but since there is no true zero point it isn't meaningful to
-            make a ratio. For example: 6 PM isn't twice as big as 3 PM despite there being three hours
-            between the two times of day.</p>
-        <p><b>Ratio Level:</b> Data have a meaningful order, measurable differences, and a true zero
-            point, allowing for meaningful ratios. Examples include weight, height, or age.</p>
-    </div>
-    <div class="example">
-        <h2 class="example-header">Example <span class="example-number"></span>: Levels of Measurement
-        </h2>
-        <p>Classify the following scenarios by their level of measurement:</p>
-        <ol type="a">
-            <li>Types of cars (e.g., SUV, sedan, truck).</li>
-            <li>The ranking of runners in a race.</li>
-            <li>Temperature readings in Fahrenheit.</li>
-            <li>The time it takes for participants to complete a task, measured in seconds.</li>
-        </ol>
-        <div class="solution">
-            <h2 class="solution-header">Solution</h2>
-            <div class="inches" data-height="1.5in"></div>
-            <div class="dontprint">
-                <ol type="a">
-                    <li><b>Nominal:</b> Types of cars are categorized without order.</li>
-                    <li><b>Ordinal:</b> Rankings in a race indicate an order but do not provide
-                        measurable
-                        differences between positions.</li>
-                    <li><b>Interval:</b> Fahrenheit temperatures provide measurable differences but lack
-                        a
-                        true
-                        zero.</li>
-                    <li><b>Ratio:</b> Time in seconds includes meaningful differences and a true zero,
-                        allowing
-                        for ratios.</li>
-                </ol>
-            </div>
-            <p class="dontprint blacksquare">\[ \tag*{\(\blacksquare\)} \]</p>
-        </div>
-    </div>
+    <h1>Misleading Graphs</h1>
+    <p>Read over the following content and become familiar with knowing what graphs can be misleading.
+    </p>
+    <a
+        href="https://mathspace.co/textbooks/syllabuses/Syllabus-1027/topics/Topic-20271/subtopics/Subtopic-266536/?activeTab=theory">Link
+        to Article on Misleading Graphs</a>
 </section>
 
 <div class="d-flex justify-content-between mt-4">
