--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                                 <!-- Home & About Buttons as Links -->
-                                <a href="index.html" class="btn btn-outline-success me-2">Home</a>
-                                <a href="1 Start Here/About This Course MCT.html"
+                                <a href="#" class="btn btn-outline-success me-2">Home</a>
+                                <a href="1 Start Here/About This Course.html"
                                     class="btn btn-outline-secondary me-2">About</a>
                                 <a id="printNotes" class="btn btn-outline-primary" data-bs-toggle="tooltip"
                                     data-bs-placement="bottom"
@@ -118,10 +118,18 @@
                             </ul>
                             <h3>Chapter 2: Organizing and Summarizing Data</h3>
                             <ul>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
-                                <li><a href=""></a></li>
+                                <li><a href="2 Unit One Content/GeoGebra Tools and Datasets for Chapter 2.html">GeoGebra Tools and Datasets for Chapter 2</a></li>
+                                <li><a href="2 Unit One Content/Creating Frequency Distributions.html">Creating Frequency Distributions</a></li>
+                                <li><a href="2 Unit One Content/Creating Relative Frequency Distributions.html">Creating Relative Frequency Distributions</a></li>
+                                <li><a href="2 Unit One Content/Creating Cumulative Frequency Distributions.html">Creating Cumulative Frequency Distributions</a></li>
+                                <li><a href="2 Unit One Content/Creating Frequency Histograms.html">Creating Frequency Histograms</a></li>
+                                <li><a href="2 Unit One Content/Shapes of Frequency Distributions.html">Shapes of Frequency Distributions</a></li>
+                                <li><a href="2 Unit One Content/Constructing Stem_and_Leaf Plots.html">Constructing Stem-and-Leaf Plots</a></li>
+                                <li><a href="2 Unit One Content/Constructing Dot Plots.html">Constructing Dot Plots</a></li>
+                                <li><a href="2 Unit One Content/Constructing Time Series Plots.html">Constructing Time Series Plots</a></li>
+                                <li><a href="2 Unit One Content/Constructing Bar Graphs.html">Constructing Bar Graphs</a></li>
+                                <li><a href="2 Unit One Content/Creating Pie Graphs.html">Creating Pie Graphs</a></li>
+                                <li><a href="2 Unit One Content/Misleading Graphs.html">Misleading Graphs</a></li>
                                 <li><a href="2 Unit One Content/Chapter 2 Lecture Notes.html">Chapter 2 Lecture Notes
                                         Complete</a></li>
                             </ul>
