--- a/1 Start Here/About This Course.html
+++ b/1 Start Here/About This Course.html
@@ -36,8 +36,8 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <!-- Home & About Buttons as Links -->
-        <a href="index.html" class="btn btn-outline-success me-2">Home</a>
-        <a href="1 Start Here/About This Course MCT.html" class="btn btn-outline-secondary me-2">About</a>
+        <a href="../index.html" class="btn btn-outline-success me-2">Home</a>
+        <a href="#" class="btn btn-outline-secondary me-2">About</a>
 <a id="printNotes" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="<span style='color:yellow;'>⚠️</span> <strong>Use Ctrl+P to Print Full Notes Without Blanks</strong>">Print Lecture Blank Notes</a>
 
         <!-- Search Bar -->
