some edits to MyOpenMath codes and lecture notes

--- a/1 Start Here/Common MyOpenMath Codes.html
+++ b/1 Start Here/Common MyOpenMath Codes.html
@@ -115,7 +115,13 @@
                             Copy Histogram Generator GeoGebra Tool
                         </button>
                         <textarea id="histogramGeoGebraTool" style="position: absolute; left: -9999px;">
-                            <p>Below is the GeoGebra Histogram Generator Tool. If this app is too small to view, you can open the <a href="https://www.geogebra.org/material/iframe/id/p8ubdwrm/width/973/height/874/border/888888/sfsb/true/smb/true/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false" target="_blank">application here in a new window</a>. If the spreadsheet isn't showing, you can click the "hamburger" menu in the top right corner, click "view", and toggle the "spreadsheet" on to paste in your data.</p>
+                            <p>Below is the GeoGebra Histogram Generator Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/material/iframe/id/p8ubdwrm" target="_blank" rel="noopener noreferrer" 
+                                   style="font-weight: bold; color: #034078; text-decoration: underline;">
+                                    application here in a new window
+                                </a>.
+                                If the spreadsheet isn't showing, you can click the "hamburger" menu in the top right corner, click "view", and toggle the "spreadsheet" on to paste in your data.
+                            </p>
                             <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
                                 <div style="position: relative; width: 100%; max-width: 800px; padding-top: 89.8%;">
                                     <iframe scrolling="no" title="Histogram Generator Tool" 
@@ -150,6 +156,106 @@
                         </textarea>
                     </div>
 
+                    <div class="iframe-copy">
+                        <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                            Contains a responsive iframe element for embedding the Stem-And-Leaf Plot GeoGebra tool into MyOpenMath problems.
+                        </p>
+                        <button onclick="copyCodeToClipboard('stemLeafGeoGebraTool')" 
+                            style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                            Copy Stem-And-Leaf Plot GeoGebra Tool
+                        </button>
+                        <textarea id="stemLeafGeoGebraTool" style="position: absolute; left: -9999px;">
+                            <p>Below is the GeoGebra Stem-And-Leaf Plot Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/m/payaagsb" target="_blank" rel="noopener noreferrer">
+                                    application here in a new window
+                                </a>.
+                            </p>
+                            <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                <div style="position: relative; width: 100%; max-width: 800px; padding-top: 75%;">
+                                    <iframe scrolling="no" title="Stem-And-Leaf Plot Tool"
+                                        src="https://www.geogebra.org/material/iframe/id/payaagsb"
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </textarea>
+                    </div>
+
+                    <div class="iframe-copy">
+                        <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                            Contains a responsive iframe element for embedding the Dot Plot GeoGebra tool into MyOpenMath problems.
+                        </p>
+                        <button onclick="copyCodeToClipboard('dotPlotGeoGebraTool')" 
+                            style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                            Copy Dot Plot GeoGebra Tool
+                        </button>
+                        <textarea id="dotPlotGeoGebraTool" style="position: absolute; left: -9999px;">
+                            <p>Below is the GeoGebra Dot Plot Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/m/svdxyybm" target="_blank" rel="noopener noreferrer">
+                                    application here in a new window
+                                </a>.
+                            </p>
+                            <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                <div style="position: relative; width: 100%; max-width: 800px; padding-top: 75%;">
+                                    <iframe scrolling="no" title="Dot Plot Tool"
+                                        src="https://www.geogebra.org/material/iframe/id/svdxyybm"
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </textarea>
+                    </div>
+                    
+                    <div class="iframe-copy">
+                        <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                            Contains a responsive iframe element for embedding the Time Series Plot GeoGebra tool into MyOpenMath problems.
+                        </p>
+                        <button onclick="copyCodeToClipboard('timeSeriesGeoGebraTool')" 
+                            style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                            Copy Time Series Plot GeoGebra Tool
+                        </button>
+                        <textarea id="timeSeriesGeoGebraTool" style="position: absolute; left: -9999px;">
+                            <p>Below is the GeoGebra Time Series Plot Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/m/khx9mq7k" target="_blank" rel="noopener noreferrer">
+                                    application here in a new window
+                                </a>.
+                            </p>
+                            <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                <div style="position: relative; width: 100%; max-width: 800px; padding-top: 75%;">
+                                    <iframe scrolling="no" title="Time Series Plot Tool"
+                                        src="https://www.geogebra.org/material/iframe/id/khx9mq7k"
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </textarea>
+                    </div>
+
+                    <div class="iframe-copy">
+                        <p style="font-family: Arial, sans-serif; font-size: 14px; color: #034078; text-align: center; margin-bottom: 10px;">
+                            Contains a responsive iframe element for embedding the Bar and Pie Graph GeoGebra tool into MyOpenMath problems.
+                        </p>
+                        <button onclick="copyCodeToClipboard('barPieGeoGebraTool')" 
+                            style="background-color: #034078; color: white; border: none; padding: 8px 15px; font-size: 14px; border-radius: 5px; cursor: pointer;">
+                            Copy Bar and Pie Graph GeoGebra Tool
+                        </button>
+                        <textarea id="barPieGeoGebraTool" style="position: absolute; left: -9999px;">
+                            <p>Below is the GeoGebra Bar and Pie Graph Tool. If this app is too small to view, you can open the 
+                                <a href="https://www.geogebra.org/m/tmu6ja9y" target="_blank" rel="noopener noreferrer">
+                                    application here in a new window
+                                </a>.
+                            </p>
+                            <div style="background-color: #A9D6E5; border: 3px solid #034078; padding: 10px; border-radius: 5px; display: flex; justify-content: center;">
+                                <div style="position: relative; width: 100%; max-width: 800px; padding-top: 75%;">
+                                    <iframe scrolling="no" title="Bar and Pie Graph Tool"
+                                        src="https://www.geogebra.org/material/iframe/id/tmu6ja9y"
+                                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </textarea>
+                    </div>
+                    
 
                     <div class="d-flex justify-content-between mt-4">
                         <button id="prevPage" class="btn btn-outline-primary navigation-link previous"
